name: "1 - Recipe Read-Only From Search Flow"
appId: "com.recipedia"
tags:
  - recipe-readonly
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "SearchScreen::RecipeCards::2::Chicken Tacos"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to recipe card"

- waitForAnimationToEnd

- tapOn:
    id: "SearchScreen::RecipeCards::2::Chicken Tacos"
    label: "Action - Open Chicken Tacos recipe"

- extendedWaitUntil:
    visible:
      id: "Recipe::AppBar"
    timeout: 30000
    label: "Wait for recipe screen to load"
- runFlow:
    file: "../../asserts/recipe/readonly/en/chickenTacos.yaml"
    label: "Assert - Verify Chicken Tacos recipe is displayed correctly"

- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Action - Back to the Search Screen"

- runFlow:
    file: "../../asserts/search/en/assertSearchScreen.yaml"
    label: "Assert - Verify Search screen is displayed"
